# fortran-namelist

./: .gitignore  .mypy.ini  .travis.yml  CMakeLists.txt  README.md  TestAll.m  TestUnit.m  azure-pipelines.yml  example.nml  read.f90  read_namelist.m  read_namelist.py  read_nml.py  read_nml_group.m  test_nml.py
.github/workflows/: ci.yml
matlab/: TestUnit.m  read_namelist.m
